--- a/index.html
+++ b/index.html
@@ -891,6 +891,11 @@
     </div>
   </section>
   <!-- ====== Contact End ====== -->
+	
+  <!-- Calendly inline widget begin -->
+    <div class="calendly-inline-widget" data-url="https://calendly.com/adam-muir" style="min-width:320px;height:630px;"></div>
+    <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
+  <!-- Calendly inline widget end -->
 
   <!-- ====== Footer Start ====== -->
   <footer class="ud-footer wow fadeInUp" data-wow-delay=".15s">
