--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title data-heap-redact-text>Play | Free Startup and SaaS Landing Page Template by UIdeck</title>
+  <title>Play | Free Startup and SaaS Landing Page Template by UIdeck</title>
 
   <!-- Primary Meta Tags -->
   <meta name="title" content="Play - Free Open Source HTML Bootstrap Template by UIdeck">
@@ -62,8 +62,8 @@
 
 <body>
   <!-- ====== Header Start ====== -->
-  <header class="ud-header">
-    <div class="container">
+  <header data-heap-redact-attributes='data-test' class="ud-header">
+    <div data-test="bla" class="container">
       <div class="row">
         <div class="col-lg-12">
           <nav class="navbar navbar-expand-lg">
