--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                   <a class="ud-menu-scroll" href="#about">About</a>
                 </li>
                 <li class="nav-item">
-                  <a class="ud-menu-scroll" href="#pricing">Pricing</a>
+                  <a data-heap-redact-text class="ud-menu-scroll" href="#pricing">Pricing</a>
                 </li>
                 <li class="nav-item">
                   <a class="ud-menu-scroll" href="#team">Team</a>
